test_regress/t/t_covergroup_trans_errors_bad.out
%Warning-COVERIGN: t/t_covergroup_trans_errors_bad.v:16:26: Unsupported: '[*]' in cover transition
   16 |       bins t_repeat = (1 [*2]);    
      |                          ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: t/t_covergroup_trans_errors_bad.v:15:12: Transition requires at least two values
                                               : ... note: In instance 't'
   15 |       bins t_single = (1);         
      |            ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_covergroup_trans_errors_bad.v:16:12: Transition set without items
                                               : ... note: In instance 't'
   16 |       bins t_repeat = (1 [*2]);    
      |            ^~~~~~~~
%Error: Exiting due to
